--- a/web-server/package.json
+++ b/web-server/package.json
@@ -13,8 +13,10 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.9.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "path": "^0.12.7"
   }
 }
